--- a/project/config/dev/subnet.yaml
+++ b/project/config/dev/subnet.yaml
@@ -1,4 +1,4 @@
-template_path: test/subnet.json
+template_path: subnet.json
 parameters:
   CidrBlock: "10.0.0.0/28"
   VpcId: !stack_output dev/vpc.yaml::VpcId
