--- a/project/config/dev/instance1.yaml
+++ b/project/config/dev/instance1.yaml
@@ -1,4 +1,4 @@
-template_path: test/instance.json
+template_path: instance.json
 env: dev
 parameters:
   SubnetId: !stack_output dev/subnet.yaml::SubnetId
