--- a/project/config/dev/s3bucket1.yaml
+++ b/project/config/dev/s3bucket1.yaml
@@ -1,7 +1,7 @@
-template_path: delete/s3_bucket.json
+template_path: s3_bucket.json
 
 parameters:
-  BucketName: "phdata-valhalla-11" 
+  BucketName: "phdata-valhalla-1" 
 
 sceptre_user_data:
   tags:
