--- a/project/config/prod/instance2.yaml
+++ b/project/config/prod/instance2.yaml
@@ -1,4 +1,4 @@
-template_path: test/instance.json
+template_path: instance.json
 parameters:
   SubnetId: !stack_output prod/subnet.yaml::SubnetId
   name:   "dev-instance2"
